School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_declarations/decl_FloatAvecInt.deca
{
    int entier = 10;
    float float_int = entier;
}
