School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/decl_IntAvecFloat.deca
{
    int int_float = 10.5;
}